public class Board {

  public Board() {
  }
}
