public class Game {


    public Player getPlayer1() {
        /* aqui implementaremos tal y tal y lo haremos*/
        return null;
    }

    public Player getPlayer2() {
        return null;
    }

    public boolean getGameFinish(){
        return false;
    }
}
