package model;

public enum Direction {
        HORIZONTAL,
        VERTICAL

}
