package model;


public class Ship {
    public Ship(Coordinate coo, int size, Direction horizontal) {

    }

    public int getSize() {
        return -1;
    }
}
