package model;

public enum State {
  EMPTY,
  SHIP,
  HIT
}
