@startuml

class model.Game{
player1: Player
player2: Player
finish : Boolean

menu(Option): void
}

class model.Player{
name: String
won: Boolean
turn : Boolean

isWinner():
hit( Coordinate): Boolean
addBoat(Boat): boolean
}

class model.Board{
matrix[10][10] : Coordinate
ships[10]: Ship
addShip(Ship): boolean
removeShip(Ship): void
hit(Coordinate): State
}

class model.Ship{

size : int
direction : Direction
shipParts[size]: Coordinate

Ship(iniCoord, size, direction)

}

class model.Coordinate{
- x : int
- y : int
- state : State

Coordinate(x,y)
getState(): State
changeState(newState): Boolean

}

enum model.State{
   EMPTY
   SHIP
   HIT

}

enum model.Direction{
   HORIZONTAL
   VERTICAL
}

model.Game "1" *-- "1..*" model.Player
model.Player "1" *-- "1" model.Board
model.Board "1" *-- "1..*" model.Coordinate
model.Board --> model.Ship

model.Ship -..-> model.Direction
model.Coordinate -..-> model.State

@enduml